ci: fix features
Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,8 +34,8 @@ jobs:
     strategy:
       matrix:
         features:
-          - color
-          - hello
+          - deno
+          - fish
     steps:
       - uses: actions/checkout@v4
 
