ci: test against rocky
Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,12 +13,13 @@ jobs:
     strategy:
       matrix:
         features:
-          - color
-          - hello
+          - deno
+          - fish
         baseImage:
           - debian:latest
           - ubuntu:latest
           - mcr.microsoft.com/devcontainers/base:ubuntu
+          - rockylinux/rockylinux:10-ubi
     steps:
       - uses: actions/checkout@v4
 
