--- a/src/fish/devcontainer-feature.json
+++ b/src/fish/devcontainer-feature.json
@@ -1,12 +1,12 @@
 {
   "name": "Fish configuration",
   "id": "fish",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Fish with Xe's prompt and settings",
   "options": {
     "fisher": {
       "type": "boolean",
-      "default": true,
+      "default": false,
       "description": "Install Fisher plugin manager"
     }
   },
@@ -17,5 +17,7 @@
       }
     }
   },
-  "installsAfter": ["ghcr.io/devcontainers/features/common-utils"]
+  "installsAfter": [
+    "ghcr.io/devcontainers/features/common-utils"
+  ]
 }
