ci: yoke feature
Signed-off-by: Xe Iaso <me@xeiaso.net>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,6 +16,7 @@ jobs:
           - deno
           - fish
           - ko
+          - yoke
         baseImage:
           - mcr.microsoft.com/devcontainers/base:bookworm
     steps:
@@ -36,6 +37,7 @@ jobs:
           - deno
           - fish
           - ko
+          - yoke
     steps:
       - uses: actions/checkout@v4
 
